--- a/lab13/styles.css
+++ b/lab13/styles.css
@@ -1,6 +1,6 @@
 body {background-color:#421389;
 color:#FFFFFF;}
-a {color:#4d22a3;}
+a {color:#ffffff;}
 h1,h2 {color:#e3b8ff;}
 nav {background-color:#e3b8ff;}
 nav a {color:#561baf;}
