--- a/lab13/styles.css
+++ b/lab13/styles.css
@@ -1,7 +1,7 @@
 body {background-color:#421389;
 color:#FFFFFF;}
 a {color:#ffffff;}
-h1,h2 {color:#e3b8ff;}
+h1,h2 {color:#ffffff;}
 nav {background-color:#e3b8ff;}
 nav a {color:#561baf;}
 nav a:hover {background-color:#ffffff;}
