--- a/project6/styles.css
+++ b/project6/styles.css
@@ -6,6 +6,28 @@ body {
     letter-spacing: 1px;
 }
 
+h1 {
+    font-family: "Nunito", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+}
+
+p {
+    font-family: "Nunito", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.nav {
+    font-family: "Nunito", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 1.15em;
+}
+
 .skip {
     background-color: #ffffff;
     padding: 8px;
@@ -17,7 +39,7 @@ body {
     left: -999px;
 }
 
-.skip:focus{
+.skip:focus {
     left: 10px;
 }
 
