--- a/project6/designs.css
+++ b/project6/designs.css
@@ -86,6 +86,7 @@ img {
     .indesign2 img {
         margin-top: 20px;
         margin-bottom: 5px;
+        margin-left:20px;
     }
     .slideshow {
         width: 90%;
