--- a/project6/styles.css
+++ b/project6/styles.css
@@ -10,7 +10,7 @@ h2 {
     font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
-    color: #4c5f90;
+    color: #7c90c3;
     text-align: center;
 }
 
