--- a/project6/styles.css
+++ b/project6/styles.css
@@ -8,11 +8,17 @@ body {
 h2 {
     font-family: "Nunito", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 300;
+    font-weight: 400;
     font-style: normal;
     color: #7c90c3;
     text-align: center;
     font-size: 5em;
+}
+
+h3 {
+    color: #253551;
+    font-size: 1.25em;
+    font-weight: 700;
 }
 
 .main {
@@ -20,7 +26,7 @@ h2 {
     font-size: 8em;
     font-weight: 700;
     font-style: normal;
-    color: #7c90c3;
+    color: #9cb1e4;
     text-align: center;
 }
 
@@ -80,10 +86,6 @@ nav a:hover {
     font-weight: 800;
 }
 
-footer a:hover {
-    color: #253551;
-}
-
 
 .nav {
     display: flex;
@@ -106,15 +108,11 @@ footer {
     padding: 20px;
 }
 
-h3 {
-    color: #253551;
-    font-size: 1em;
-}
 
 footer a {
     color: #ffffff;
     text-decoration: none;
-    font-size: .75em;
+    font-size: .85em;
 }
 
 .instagram,
@@ -129,7 +127,7 @@ footer {
 }
 
 .copyright {
-    font-size: 0.5em;
+    font-size: 0.75em;
 }
 
 .footer {
