--- a/project6/styles.css
+++ b/project6/styles.css
@@ -207,6 +207,7 @@ textarea {
     grid-template-columns: 32% 32% 32%;
     grid-gap: 1em;
     margin-bottom: 50px;
+    margin-right: -20px;
 }
 
 .grid img,
